# aad-jitjs

./: .gitignore  CMakeLists.txt  README.md  generate_instances.py  irace.Rdata  irace_full_output.txt  irace_full_output2.txt  irace_full_output3.txt  irace_full_output6.txt  run_experiments.py
cmake/: FindCPLEX.cmake
instances/baptiste-2008/loose-equal/: test1_10x10.txt  test1_10x2.txt  test1_10x5.txt  test1_15x10.txt  test1_15x2.txt  test1_15x5.txt  test1_20x10.txt  test1_20x2.txt  test1_20x5.txt  (+9 more)
instances/solved_by_cplex/: solutions.txt  test1_10x10_1.txt  test1_10x2_1.txt  test1_10x2_10.txt  test1_10x2_11.txt  test1_10x2_12.txt  test1_10x2_13.txt  test1_10x2_14.txt  test1_10x2_15.txt  test1_10x2_16.txt  test1_10x2_17.txt  test1_10x2_18.txt  test1_10x2_19.txt  test1_10x2_2.txt  test1_10x2_20.txt  test1_10x2_21.txt  test1_10x2_22.txt  test1_10x2_23.txt  test1_10x2_24.txt  test1_10x2_25.txt  test1_10x2_26.txt  test1_10x2_27.txt  test1_10x2_28.txt  test1_10x2_29.txt  test1_10x2_3.txt  test1_10x2_30.txt  test1_10x2_31.txt  test1_10x2_32.txt  test1_10x2_33.txt  test1_10x2_34.txt  test1_10x2_35.txt  test1_10x2_36.txt  test1_10x2_37.txt  test1_10x2_38.txt  test1_10x2_39.txt  test1_10x2_4.txt  test1_10x2_40.txt  test1_10x2_41.txt  test1_10x2_42.txt  test1_10x2_43.txt  (+122 more)
iraceruns/finalrun/: irace.Rdata  irace_full_output.txt  irace_full_output2.txt  irace_full_output3.txt  irace_full_output4.txt  irace_full_output5.txt
iraceruns/second/: iraceBackup.Rdata  iraceBackup2.Rdata  iraceBackup3.Rdata  iraceBackup4.Rdata  iraceBackup5.Rdata  irace_full_output4.txt  irace_full_output5.txt
programs/instance-generator/: CMakeLists.txt  main.cpp
programs/instance-generator/src/: InstanceGenerator.cpp  InstanceGenerator.hpp  Random.cpp  Random.hpp
programs/solver/: CMakeLists.txt  main.cpp
programs/solver/src/: Instance.cpp  Instance.hpp  Parameters.cpp  Parameters.hpp  Solver.cpp  Solver.hpp  SolverCPLEX.cpp  SolverInitialSolutions.cpp  SolverNeighborhoods.cpp  SolverNeighborhoodsLS.cpp  SolverNeighborhoodsTabu.cpp  SolverPertub.cpp  SolverSchedulers.cpp  SolverSearch.cpp  State.cpp  State.hpp  TabuCycleDetector.cpp  TabuCycleDetector.hpp  TabuJumpList.cpp  TabuJumpList.hpp  TabuList.cpp  TabuList.hpp  TabuTrio.cpp  TabuTrio.hpp  Timer.cpp  Timer.hpp  Util.cpp  Util.hpp
results/also-big-instances/: res.txt
results/only-small-insts/: 1.txt  2.txt  3.txt  4.txt  5.txt
results/vns/: 1.txt  1raw.txt  2.txt  2raw.txt  3.txt  3raw.txt  4.txt  4raw.txt  5raw.txt  6.txt  6raw.txt
tuning/: irace.Rdata  parameters.txt  repair.R  run_irace.R  scenario.txt  target-runner  train-instances.txt
(+55 files in other folders)
